--- a/4. Train a Model.ipynb
+++ b/4. Train a Model.ipynb
@@ -499,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This example has bad ground truth.  The model found some trees that weren't even marked.  Hooray for the model!"
+    "This example has bad ground truth.  The model found some trees that weren't even marked.  Hooray for the model!  Also, there's a river marked in the data that doesnt really exist.  That's unfortunate."
    ]
   },
   {
