--- a/4. Train a Model.ipynb
+++ b/4. Train a Model.ipynb
@@ -139,6 +139,15 @@
     "        img_resized[:, :, i] = imresize(img[:, :, i], new_shape, interp='bicubic')\n",
     "    return img_resized\n",
     "\n",
+    "import pyproj\n",
+    "def reproject_shapely(proj_init, proj_targ, poly):\n",
+    "    project = functools.partial(\n",
+    "        pyproj.transform,\n",
+    "        pyproj.Proj(proj_init),\n",
+    "        pyproj.Proj(proj_targ)\n",
+    "    )\n",
+    "    return shapely.ops.transform(project, poly)\n",
+    "\n",
     "# Build a training set\n",
     "def make_set(image_summary, vectors, training_set_size, input_size, random=np.random):\n",
     "    rows_to_use = random.choice(image_summary.index, training_set_size, replace=False)\n",
@@ -152,9 +161,14 @@
     "                # img = scale_bands(img, lower_pct = 5, upper_pct = 95)\n",
     "                img_bounds = shapely.geometry.box(*src.bounds)\n",
     "                img_transform = list(np.array(~src.affine)[[0, 1, 3, 4, 2, 5]])\n",
+    "                img_crs = src.crs\n",
     "\n",
     "        masks = []\n",
     "        for poly in vectors:\n",
+    "            # If the image is not projected in epsg:4326, we will need to change the polygon to match the image\n",
+    "            if not img_crs == {'init': 'epsg:4326'}:\n",
+    "                poly = reproject_shapely({'init': 'epsg:4326'}, img_crs, poly)\n",
+    "            \n",
     "            # Get the intersection between the polygon and the image bounds\n",
     "            mask_poly = poly.intersection(img_bounds)\n",
     "\n",
@@ -445,13 +459,7 @@
       "1000/1000 [==============================] - 32s - loss: 0.0886 - jacc_coef_int: 0.6992 - val_loss: 0.0714 - val_jacc_coef_int: 0.6676\n",
       "Epoch 55/100\n",
       "1000/1000 [==============================] - 32s - loss: 0.0885 - jacc_coef_int: 0.7013 - val_loss: 0.0711 - val_jacc_coef_int: 0.6687\n",
-      "Epoch 56/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 56/100\n",
       "1000/1000 [==============================] - 32s - loss: 0.0885 - jacc_coef_int: 0.7016 - val_loss: 0.0715 - val_jacc_coef_int: 0.6677\n",
       "Epoch 57/100\n",
       "1000/1000 [==============================] - 32s - loss: 0.0884 - jacc_coef_int: 0.7014 - val_loss: 0.0716 - val_jacc_coef_int: 0.6676\n",
@@ -598,7 +606,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Function to create an iterator with examples\n",
