Add comment about validation set

--- a/4. Train a Model.ipynb
+++ b/4. Train a Model.ipynb
@@ -203,7 +203,7 @@
     "\n",
     "random = np.random.RandomState(2) \n",
     "X_train, Y_train = make_set(image_summary, vectors, 1000, INPUT_SIZE, random)\n",
-    "X_val, Y_val = make_set(image_summary, vectors, 100, INPUT_SIZE, random)"
+    "X_val, Y_val = make_set(image_summary, vectors, 100, INPUT_SIZE, random) # This is NOT a proper validation set.  Too lazy to fix it right now..."
    ]
   },
   {
