change src.affine to src.transform

--- a/2. Download Ground-Truth Data from OSM.ipynb
+++ b/2. Download Ground-Truth Data from OSM.ipynb
@@ -510,7 +510,7 @@
     "with rasterio.open(solar_images.iloc[0].image_name) as src:\n",
     "        img = src.read([5, 3, 2]).transpose([1,2,0])\n",
     "        img_bounds = shapely.geometry.box(*src.bounds)\n",
-    "        img_transform = list(np.array(~src.affine)[[0, 1, 3, 4, 2, 5]])\n",
+    "        img_transform = list(np.array(~src.transform)[[0, 1, 3, 4, 2, 5]])\n",
     "\n",
     "\n",
     "panel_geometry = solar_panels[solar_panels.intersects(img_bounds)].unary_union\n",
