--- a/3. Make training masks from OSM data.ipynb
+++ b/3. Make training masks from OSM data.ipynb
@@ -789,7 +789,7 @@
     "with rasterio.open(file_name) as src:\n",
     "        img = scale_bands(src.read([5, 3, 2]).transpose([1,2,0]))\n",
     "        img_bounds = shapely.geometry.box(*src.bounds)\n",
-    "        img_transform = list(np.array(~src.affine)[[0, 1, 3, 4, 2, 5]])\n",
+    "        img_transform = list(np.array(~src.transform)[[0, 1, 3, 4, 2, 5]])\n",
     "        img_crs = src.crs\n",
     "        "
    ]
@@ -969,7 +969,7 @@
     "with rasterio.open(file_name) as src:\n",
     "        img = scale_bands(src.read([5, 3, 2]).transpose([1,2,0]))\n",
     "        img_bounds = shapely.geometry.box(*src.bounds)\n",
-    "        img_transform = list(np.array(~src.affine)[[0, 1, 3, 4, 2, 5]])\n",
+    "        img_transform = list(np.array(~src.transform)[[0, 1, 3, 4, 2, 5]])\n",
     "        img_crs = src.crs\n",
     "        \n",
     "# Get the intersection between the forest and the image bounds\n",
