--- a/4. Train a Model.ipynb
+++ b/4. Train a Model.ipynb
@@ -160,7 +160,7 @@
     "                img = resize(img, (input_size, input_size))\n",
     "                # img = scale_bands(img, lower_pct = 5, upper_pct = 95)\n",
     "                img_bounds = shapely.geometry.box(*src.bounds)\n",
-    "                img_transform = list(np.array(~src.affine)[[0, 1, 3, 4, 2, 5]])\n",
+    "                img_transform = list(np.array(~src.transform)[[0, 1, 3, 4, 2, 5]])\n",
     "                img_crs = src.crs\n",
     "\n",
     "        masks = []\n",
@@ -797,7 +797,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I think the model has a better jaccard score than the \"ground truth\" in this case."
+    "I think the model performed better than the \"ground truth\" in this case."
    ]
   },
   {
